// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CandidateDiff theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <article
    aria-label="Candidate edit to manuscript/main.tex"
    class="rh-candidate-diff"
    data-audit="passed"
    data-view="unified"
    id="rh-candidatediff-ID"
  >
    <header
      class="rh-candidate-diff__header"
    >
      <h3
        class="rh-candidate-diff__file"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-compare rh-icon"
          data-icon="git-compare"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M13 6h3a2 2 0 0 1 2 2v7"
          />
          <path
            d="M11 18H8a2 2 0 0 1-2-2V9"
          />
        </svg>
        <span>
          manuscript/main.tex
        </span>
      </h3>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-candidate"
        data-status="candidate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-dashed rh-icon"
          data-icon="circle-dashed"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 2.182a10 10 0 0 1 3.8 0"
          />
          <path
            d="M13.9 21.818a10 10 0 0 1-3.8 0"
          />
          <path
            d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
          />
          <path
            d="M2.182 13.9a10 10 0 0 1 0-3.8"
          />
          <path
            d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
          />
          <path
            d="M21.818 10.1a10 10 0 0 1 0 3.8"
          />
          <path
            d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
          />
          <path
            d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Candidate
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--tone-success"
        data-tone="success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check rh-icon"
          data-icon="circle-check"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m16 9-5.5 5.5L8 12"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Audit passed
        </span>
      </span>
      <div
        aria-label="Diff layout"
        class="rh-candidate-diff__views"
        role="group"
      >
        <button
          aria-pressed="true"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rows2 lucide-rows-2 rh-icon"
            data-icon="rows-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M3 12h18"
            />
          </svg>
          Unified
        </button>
        <button
          aria-pressed="false"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-columns2 lucide-columns-2 rh-icon"
            data-icon="columns-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M12 3v18"
            />
          </svg>
          Side by side
        </button>
      </div>
    </header>
    <p
      class="rh-candidate-diff__origin"
    >
      <button
        class="rh-candidate-diff__origin-link"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-square rh-icon"
          data-icon="message-square"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
          />
        </svg>
        Open message M0042
      </button>
      <span
        class="rh-candidate-diff__pack"
      >
        Context used: CP0007
      </span>
    </p>
    <section
      aria-label="What this candidate changes"
      class="rh-candidate-diff__summary"
    >
      <div
        class="rh-candidate-diff__summary-group"
        data-group="weakened"
      >
        <h4>
          Weakened propositions
          <span
            class="rh-candidate-diff__summary-count"
          >
            1
          </span>
        </h4>
        <ul>
          <li>
            "proves" becomes "is consistent with"
          </li>
        </ul>
      </div>
    </section>
    <div
      class="rh-candidate-diff__hunks"
    >
      <section
        aria-label="@@ -88,4 +88,4 @@"
        class="rh-candidate-diff__hunk"
      >
        <p
          class="rh-candidate-diff__hunk-header"
        >
          @@ -88,4 +88,4 @@
        </p>
        <div
          class="rh-candidate-diff__lines"
        >
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              We measured the response under load.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="removed"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              -
            </span>
            <span
              class="rh-visually-hidden"
            >
              removed
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect proves the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="added"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              +
            </span>
            <span
              class="rh-visually-hidden"
            >
              added
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect is consistent with the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              \\cite{smith2024}
            </code>
            <span
              class="rh-candidate-diff__protected"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield rh-icon"
                data-icon="shield"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
              </svg>
              protected: citation
            </span>
          </div>
        </div>
      </section>
    </div>
    <footer
      class="rh-candidate-diff__footer"
    >
      <button
        class="rh-button rh-button--primary rh-button--sm"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check rh-icon"
            data-icon="check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Apply to source
          </span>
        </span>
      </button>
      <button
        class="rh-button rh-button--secondary rh-button--sm"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x rh-icon"
            data-icon="x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <p
        class="rh-candidate-diff__blocked"
        data-tone="neutral"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          Applying writes the file. Nothing is written until you click Apply.
        </span>
      </p>
    </footer>
  </article>
</div>
`;

exports[`CandidateDiff theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <article
    aria-label="Candidate edit to manuscript/main.tex"
    class="rh-candidate-diff"
    data-audit="passed"
    data-view="unified"
    id="rh-candidatediff-ID"
  >
    <header
      class="rh-candidate-diff__header"
    >
      <h3
        class="rh-candidate-diff__file"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-compare rh-icon"
          data-icon="git-compare"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M13 6h3a2 2 0 0 1 2 2v7"
          />
          <path
            d="M11 18H8a2 2 0 0 1-2-2V9"
          />
        </svg>
        <span>
          manuscript/main.tex
        </span>
      </h3>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-candidate"
        data-status="candidate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-dashed rh-icon"
          data-icon="circle-dashed"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 2.182a10 10 0 0 1 3.8 0"
          />
          <path
            d="M13.9 21.818a10 10 0 0 1-3.8 0"
          />
          <path
            d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
          />
          <path
            d="M2.182 13.9a10 10 0 0 1 0-3.8"
          />
          <path
            d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
          />
          <path
            d="M21.818 10.1a10 10 0 0 1 0 3.8"
          />
          <path
            d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
          />
          <path
            d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Candidate
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--tone-success"
        data-tone="success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check rh-icon"
          data-icon="circle-check"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m16 9-5.5 5.5L8 12"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Audit passed
        </span>
      </span>
      <div
        aria-label="Diff layout"
        class="rh-candidate-diff__views"
        role="group"
      >
        <button
          aria-pressed="true"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rows2 lucide-rows-2 rh-icon"
            data-icon="rows-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M3 12h18"
            />
          </svg>
          Unified
        </button>
        <button
          aria-pressed="false"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-columns2 lucide-columns-2 rh-icon"
            data-icon="columns-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M12 3v18"
            />
          </svg>
          Side by side
        </button>
      </div>
    </header>
    <p
      class="rh-candidate-diff__origin"
    >
      <button
        class="rh-candidate-diff__origin-link"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-square rh-icon"
          data-icon="message-square"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
          />
        </svg>
        Open message M0042
      </button>
      <span
        class="rh-candidate-diff__pack"
      >
        Context used: CP0007
      </span>
    </p>
    <section
      aria-label="What this candidate changes"
      class="rh-candidate-diff__summary"
    >
      <div
        class="rh-candidate-diff__summary-group"
        data-group="weakened"
      >
        <h4>
          Weakened propositions
          <span
            class="rh-candidate-diff__summary-count"
          >
            1
          </span>
        </h4>
        <ul>
          <li>
            "proves" becomes "is consistent with"
          </li>
        </ul>
      </div>
    </section>
    <div
      class="rh-candidate-diff__hunks"
    >
      <section
        aria-label="@@ -88,4 +88,4 @@"
        class="rh-candidate-diff__hunk"
      >
        <p
          class="rh-candidate-diff__hunk-header"
        >
          @@ -88,4 +88,4 @@
        </p>
        <div
          class="rh-candidate-diff__lines"
        >
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              We measured the response under load.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="removed"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              -
            </span>
            <span
              class="rh-visually-hidden"
            >
              removed
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect proves the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="added"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              +
            </span>
            <span
              class="rh-visually-hidden"
            >
              added
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect is consistent with the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              \\cite{smith2024}
            </code>
            <span
              class="rh-candidate-diff__protected"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield rh-icon"
                data-icon="shield"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
              </svg>
              protected: citation
            </span>
          </div>
        </div>
      </section>
    </div>
    <footer
      class="rh-candidate-diff__footer"
    >
      <button
        class="rh-button rh-button--primary rh-button--sm"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check rh-icon"
            data-icon="check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Apply to source
          </span>
        </span>
      </button>
      <button
        class="rh-button rh-button--secondary rh-button--sm"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x rh-icon"
            data-icon="x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <p
        class="rh-candidate-diff__blocked"
        data-tone="neutral"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          Applying writes the file. Nothing is written until you click Apply.
        </span>
      </p>
    </footer>
  </article>
</div>
`;

exports[`CandidateDiff theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <article
    aria-label="Candidate edit to manuscript/main.tex"
    class="rh-candidate-diff"
    data-audit="passed"
    data-view="unified"
    id="rh-candidatediff-ID"
  >
    <header
      class="rh-candidate-diff__header"
    >
      <h3
        class="rh-candidate-diff__file"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-compare rh-icon"
          data-icon="git-compare"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M13 6h3a2 2 0 0 1 2 2v7"
          />
          <path
            d="M11 18H8a2 2 0 0 1-2-2V9"
          />
        </svg>
        <span>
          manuscript/main.tex
        </span>
      </h3>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-candidate"
        data-status="candidate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-dashed rh-icon"
          data-icon="circle-dashed"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 2.182a10 10 0 0 1 3.8 0"
          />
          <path
            d="M13.9 21.818a10 10 0 0 1-3.8 0"
          />
          <path
            d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
          />
          <path
            d="M2.182 13.9a10 10 0 0 1 0-3.8"
          />
          <path
            d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
          />
          <path
            d="M21.818 10.1a10 10 0 0 1 0 3.8"
          />
          <path
            d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
          />
          <path
            d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Candidate
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--tone-success"
        data-tone="success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check rh-icon"
          data-icon="circle-check"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m16 9-5.5 5.5L8 12"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Audit passed
        </span>
      </span>
      <div
        aria-label="Diff layout"
        class="rh-candidate-diff__views"
        role="group"
      >
        <button
          aria-pressed="true"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rows2 lucide-rows-2 rh-icon"
            data-icon="rows-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M3 12h18"
            />
          </svg>
          Unified
        </button>
        <button
          aria-pressed="false"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-columns2 lucide-columns-2 rh-icon"
            data-icon="columns-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M12 3v18"
            />
          </svg>
          Side by side
        </button>
      </div>
    </header>
    <p
      class="rh-candidate-diff__origin"
    >
      <button
        class="rh-candidate-diff__origin-link"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-square rh-icon"
          data-icon="message-square"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
          />
        </svg>
        Open message M0042
      </button>
      <span
        class="rh-candidate-diff__pack"
      >
        Context used: CP0007
      </span>
    </p>
    <section
      aria-label="What this candidate changes"
      class="rh-candidate-diff__summary"
    >
      <div
        class="rh-candidate-diff__summary-group"
        data-group="weakened"
      >
        <h4>
          Weakened propositions
          <span
            class="rh-candidate-diff__summary-count"
          >
            1
          </span>
        </h4>
        <ul>
          <li>
            "proves" becomes "is consistent with"
          </li>
        </ul>
      </div>
    </section>
    <div
      class="rh-candidate-diff__hunks"
    >
      <section
        aria-label="@@ -88,4 +88,4 @@"
        class="rh-candidate-diff__hunk"
      >
        <p
          class="rh-candidate-diff__hunk-header"
        >
          @@ -88,4 +88,4 @@
        </p>
        <div
          class="rh-candidate-diff__lines"
        >
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              We measured the response under load.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="removed"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              -
            </span>
            <span
              class="rh-visually-hidden"
            >
              removed
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect proves the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="added"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              +
            </span>
            <span
              class="rh-visually-hidden"
            >
              added
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect is consistent with the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              \\cite{smith2024}
            </code>
            <span
              class="rh-candidate-diff__protected"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield rh-icon"
                data-icon="shield"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
              </svg>
              protected: citation
            </span>
          </div>
        </div>
      </section>
    </div>
    <footer
      class="rh-candidate-diff__footer"
    >
      <button
        class="rh-button rh-button--primary rh-button--sm"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check rh-icon"
            data-icon="check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Apply to source
          </span>
        </span>
      </button>
      <button
        class="rh-button rh-button--secondary rh-button--sm"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x rh-icon"
            data-icon="x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <p
        class="rh-candidate-diff__blocked"
        data-tone="neutral"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          Applying writes the file. Nothing is written until you click Apply.
        </span>
      </p>
    </footer>
  </article>
</div>
`;

exports[`CandidateDiff theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <article
    aria-label="Candidate edit to manuscript/main.tex"
    class="rh-candidate-diff"
    data-audit="passed"
    data-view="unified"
    id="rh-candidatediff-ID"
  >
    <header
      class="rh-candidate-diff__header"
    >
      <h3
        class="rh-candidate-diff__file"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-compare rh-icon"
          data-icon="git-compare"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M13 6h3a2 2 0 0 1 2 2v7"
          />
          <path
            d="M11 18H8a2 2 0 0 1-2-2V9"
          />
        </svg>
        <span>
          manuscript/main.tex
        </span>
      </h3>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-candidate"
        data-status="candidate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-dashed rh-icon"
          data-icon="circle-dashed"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 2.182a10 10 0 0 1 3.8 0"
          />
          <path
            d="M13.9 21.818a10 10 0 0 1-3.8 0"
          />
          <path
            d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
          />
          <path
            d="M2.182 13.9a10 10 0 0 1 0-3.8"
          />
          <path
            d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
          />
          <path
            d="M21.818 10.1a10 10 0 0 1 0 3.8"
          />
          <path
            d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
          />
          <path
            d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Candidate
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--tone-success"
        data-tone="success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check rh-icon"
          data-icon="circle-check"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m16 9-5.5 5.5L8 12"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Audit passed
        </span>
      </span>
      <div
        aria-label="Diff layout"
        class="rh-candidate-diff__views"
        role="group"
      >
        <button
          aria-pressed="true"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-rows2 lucide-rows-2 rh-icon"
            data-icon="rows-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M3 12h18"
            />
          </svg>
          Unified
        </button>
        <button
          aria-pressed="false"
          class="rh-candidate-diff__view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-columns2 lucide-columns-2 rh-icon"
            data-icon="columns-2"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M12 3v18"
            />
          </svg>
          Side by side
        </button>
      </div>
    </header>
    <p
      class="rh-candidate-diff__origin"
    >
      <button
        class="rh-candidate-diff__origin-link"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-message-square rh-icon"
          data-icon="message-square"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
          />
        </svg>
        Open message M0042
      </button>
      <span
        class="rh-candidate-diff__pack"
      >
        Context used: CP0007
      </span>
    </p>
    <section
      aria-label="What this candidate changes"
      class="rh-candidate-diff__summary"
    >
      <div
        class="rh-candidate-diff__summary-group"
        data-group="weakened"
      >
        <h4>
          Weakened propositions
          <span
            class="rh-candidate-diff__summary-count"
          >
            1
          </span>
        </h4>
        <ul>
          <li>
            "proves" becomes "is consistent with"
          </li>
        </ul>
      </div>
    </section>
    <div
      class="rh-candidate-diff__hunks"
    >
      <section
        aria-label="@@ -88,4 +88,4 @@"
        class="rh-candidate-diff__hunk"
      >
        <p
          class="rh-candidate-diff__hunk-header"
        >
          @@ -88,4 +88,4 @@
        </p>
        <div
          class="rh-candidate-diff__lines"
        >
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              We measured the response under load.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="removed"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              -
            </span>
            <span
              class="rh-visually-hidden"
            >
              removed
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect proves the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="added"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
              +
            </span>
            <span
              class="rh-visually-hidden"
            >
              added
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              The effect is consistent with the mechanism.
            </code>
          </div>
          <div
            class="rh-candidate-diff__line"
            data-kind="context"
          >
            <span
              aria-hidden="true"
              class="rh-candidate-diff__sigil"
            >
               
            </span>
            <span
              class="rh-visually-hidden"
            >
              unchanged
            </span>
            <code
              class="rh-candidate-diff__text"
            >
              \\cite{smith2024}
            </code>
            <span
              class="rh-candidate-diff__protected"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shield rh-icon"
                data-icon="shield"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
              </svg>
              protected: citation
            </span>
          </div>
        </div>
      </section>
    </div>
    <footer
      class="rh-candidate-diff__footer"
    >
      <button
        class="rh-button rh-button--primary rh-button--sm"
        data-variant="primary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check rh-icon"
            data-icon="check"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Apply to source
          </span>
        </span>
      </button>
      <button
        class="rh-button rh-button--secondary rh-button--sm"
        data-variant="secondary"
        type="button"
      >
        <span
          class="rh-button__content"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x rh-icon"
            data-icon="x"
            fill="none"
            focusable="false"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="rh-button__label"
          >
            Reject
          </span>
        </span>
      </button>
      <p
        class="rh-candidate-diff__blocked"
        data-tone="neutral"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info rh-icon"
          data-icon="info"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
        <span>
          Applying writes the file. Nothing is written until you click Apply.
        </span>
      </p>
    </footer>
  </article>
</div>
`;
